<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <me.kyuubiran.qqcleaner.widget.DialogTopBar
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/add_config" />

    <View
        android:id="@+id/top_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="12dp" />

    <me.kyuubiran.qqcleaner.widget.DialogIconItem
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:drawableStart="@drawable/ic_cilpboard"
        android:text="@string/import_from_clipboard" />

    <me.kyuubiran.qqcleaner.widget.DialogIconItem
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:drawableStart="@drawable/ic_file"
        android:text="@string/import_from_file" />

    <me.kyuubiran.qqcleaner.widget.DialogIconItem
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:drawableStart="@drawable/ic_add"
        android:text="@string/create_config" />

    <me.kyuubiran.qqcleaner.widget.DialogIconItem
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:drawableStart="@drawable/ic_default"
        android:text="@string/create_default_config" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/theme_select"
        android:textSize="16sp" />
</LinearLayout>