<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <me.kyuubiran.qqcleaner.widget.DialogTopBar
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/item_theme" />

    <View
        android:id="@+id/top_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="12dp" />

    <me.kyuubiran.qqcleaner.widget.ThemeItem
        android:id="@+id/light_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:text="@string/light_theme" />

    <me.kyuubiran.qqcleaner.widget.ThemeItem
        android:id="@+id/dark_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:text="@string/dark_theme" />

    <me.kyuubiran.qqcleaner.widget.ThemeItem
        android:id="@+id/follow_system_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:text="@string/follow_system_theme" />

    <View
        android:id="@+id/bottom_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp" />

    <me.kyuubiran.qqcleaner.widget.ThemeItem
        android:id="@+id/black_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:text="@string/use_black_dark_theme" />


    <me.kyuubiran.qqcleaner.widget.ModifyButton
        android:id="@+id/theme_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:text="@string/theme_select" />

</LinearLayout>