<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <me.kyuubiran.qqcleaner.widget.DialogTopBar
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:id="@+id/top_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="12dp" />

    <me.kyuubiran.qqcleaner.widget.DialogIconItem
        android:id="@+id/open_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:drawableStart="@drawable/ic_open"
        android:text="@string/execute_this_config" />

    <me.kyuubiran.qqcleaner.widget.DialogIconItem
        android:id="@+id/edit_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:drawableStart="@drawable/ic_edit"
        android:text="@string/modify_config" />

    <me.kyuubiran.qqcleaner.widget.DialogIconItem
        android:id="@+id/edit_name_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:drawableStart="@drawable/ic_edit_name"
        android:text="@string/modify_config_name" />

    <me.kyuubiran.qqcleaner.widget.DialogIconItem
        android:id="@+id/save_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:drawableStart="@drawable/ic_save"
        android:text="@string/export_this_config" />

    <me.kyuubiran.qqcleaner.widget.DialogIconItem
        android:id="@+id/cilpboard_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:drawableStart="@drawable/ic_cilpboard"
        android:text="@string/copy_this_into_clipboard_config" />

    <me.kyuubiran.qqcleaner.widget.DialogIconItem
        android:id="@+id/delete_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:drawableStart="@drawable/ic_delete"
        android:text="@string/delete_this_config" />

    <TextView
        android:id="@+id/select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/cancel"
        android:textSize="16sp" />
</LinearLayout>