<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <me.kyuubiran.qqcleaner.widget.DialogTopBar
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/dialog_title_edit_path" />

    <View
        android:id="@+id/top_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="12dp" />

    <me.kyuubiran.qqcleaner.widget.DialogIconItem
        android:id="@+id/edit_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:drawableStart="@drawable/ic_edit"
        android:text="@string/sort_edit" />

    <me.kyuubiran.qqcleaner.widget.DialogIconItem
        android:id="@+id/edit_name_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:drawableStart="@drawable/ic_edit_name"
        android:text="@string/sort_edit_name" />

    <me.kyuubiran.qqcleaner.widget.DialogIconItem
        android:id="@+id/delete_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:drawableStart="@drawable/ic_delete"
        android:text="@string/delete_this_config" />

    <TextView
        android:id="@+id/select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/theme_select"
        android:textSize="16sp" />
</LinearLayout>