<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/app_icon_content_description"
        android:src="@drawable/ic_home_qqcleaner" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:singleLine="true"
        android:text="@string/module_name"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="18dp"
        android:singleLine="true"
        android:text="v2.0.0"
        android:textSize="12sp" />

    <com.gcssloop.widget.RCLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:background="#ffffff"
        android:orientation="vertical"
        app:clip_background="true"
        app:round_corner="10dp">

        <me.kyuubiran.qqcleaner.widget.ChevronItem
            android:id="@+id/github_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:text="@string/goto_github" />
    </com.gcssloop.widget.RCLinearLayout>

    <com.gcssloop.widget.RCLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:background="#ffffff"
        android:orientation="vertical"
        app:clip_background="true"
        app:round_corner="10dp">

        <me.kyuubiran.qqcleaner.widget.ChevronItem
            android:id="@+id/tg_channel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:text="@string/join_tg_channel" />

        <me.kyuubiran.qqcleaner.widget.ChevronItem
            android:id="@+id/tg_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:text="@string/join_tg_group" />
    </com.gcssloop.widget.RCLinearLayout>

    <com.gcssloop.widget.RCLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:background="#ffffff"
        android:orientation="vertical"
        app:clip_background="true"
        app:round_corner="10dp">

        <me.kyuubiran.qqcleaner.widget.ChevronItem
            android:id="@+id/developer_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:text="@string/title_dev" />
    </com.gcssloop.widget.RCLinearLayout>
</LinearLayout>