<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <me.kyuubiran.qqcleaner.widget.DialogTopBar
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/dialog_title_edit_path" />

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="16dp"
        android:autofillHints="no"
        android:hint="@string/config_author_hint"
        android:paddingHorizontal="16dp"
        android:paddingVertical="18dp"
        android:textSize="16sp" />

    <me.kyuubiran.qqcleaner.widget.ModifyButton
        android:id="@+id/time_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:text="@string/theme_select" />

</LinearLayout>