<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <me.kyuubiran.qqcleaner.widget.DialogTopBar
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/item_theme" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/time_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:autofillHints="no"
        android:hint="@string/set_auto_clean_interval_desc"
        android:inputType="number"
        android:padding="16dp"
        android:textSize="16sp" />

    <me.kyuubiran.qqcleaner.widget.ModifyButton
        android:id="@+id/time_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:text="@string/theme_select" />
</LinearLayout>