<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="24dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <me.kyuubiran.qqcleaner.widget.TimeTextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/last_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:singleLine="true"
                android:text="上次瘦身是 5 天前"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/last_time_sub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingHorizontal="8dp"
                android:paddingVertical="4dp"
                android:singleLine="true"
                android:text="上次瘦身 11 / 21 03:00"
                android:textColor="#ffffffff"
                android:textSize="8sp"
                tools:ignore="SmallSp" />
        </LinearLayout>

        <ImageView
            android:contentDescription="@string/app_icon_content_description"
            android:layout_width="88dp"
            android:layout_height="88dp"
            android:layout_gravity="center_vertical|end"
            android:singleLine="true"
            android:src="@drawable/ic_home_qqcleaner" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/top_bar">
        <!-- 这个阴影控件添加其他控件会导致阴影缩小，观感极差，目前不清楚原因所以暂时这样写 -->
        <com.lihang.ShadowLayout
            android:id="@+id/mShadowLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:hl_cornerRadius_leftTop="10dp"
            app:hl_cornerRadius_rightTop="10dp"
            app:hl_layoutBackground="#F7F7F7"
            app:hl_shadowColor="#283C4043"
            app:hl_shadowHiddenBottom="true"
            app:hl_shadowHiddenLeft="true"
            app:hl_shadowHiddenRight="true"
            app:hl_shadowLimit="3dp"
            app:hl_shadowOffsetY="-3dp" />


        <TextView
            android:id="@+id/title_setup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:singleLine="true"
            android:text="@string/title_setup"
            android:textColor="#ff202124"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.gcssloop.widget.RCLinearLayout
            android:id="@+id/setup_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_setup"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            android:background="#ffffff"
            android:orientation="vertical"
            app:clip_background="true"
            app:round_corner="10dp">

            <me.kyuubiran.qqcleaner.widget.SwitchItem
                android:id="@+id/auto_cleaner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:text="@string/item_cleaner" />

            <me.kyuubiran.qqcleaner.widget.TextItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:text="@string/item_cleaner_time" />

            <me.kyuubiran.qqcleaner.widget.ChevronItem
                android:id="@+id/config_chevr_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:text="@string/item_cleaner_config" />
        </com.gcssloop.widget.RCLinearLayout>

        <TextView
            android:id="@+id/title_more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/setup_layout"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:singleLine="true"
            android:text="@string/title_more"
            android:textColor="#ff202124"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.gcssloop.widget.RCLinearLayout
            android:id="@+id/more_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_more"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            android:background="#ffffff"
            android:orientation="vertical"
            app:clip_background="true"
            app:round_corner="10dp">

            <me.kyuubiran.qqcleaner.widget.ChevronItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:text="@string/item_theme" />

            <me.kyuubiran.qqcleaner.widget.ChevronItem
                android:id="@+id/about_chevr_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:text="@string/item_about" />

        </com.gcssloop.widget.RCLinearLayout>

        <com.lihang.ShadowLayout
            android:id="@+id/cleaner_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="24dp"
            app:hl_cornerRadius="18dp"
            app:hl_layoutBackground="#0095FF"
            app:hl_layoutBackground_true="#ffffff"
            app:hl_shadowColor="#600095FF"
            app:hl_shadowLimit="6dp"
            app:hl_shadowOffsetY="3dp"
            app:hl_shapeMode="ripple">

            <TextView
                android:layout_width="98dp"
                android:layout_height="35dp"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/cleaner_text"
                android:textColor="#ffffffff"
                android:textSize="12sp" />

        </com.lihang.ShadowLayout>
    </RelativeLayout>

</RelativeLayout>